# Planning_Agent_NDD

./: AGENTS.md  BS_Template.xlsx  Detailed_Implementation_Plan.md  FS line mapping.md  IPA in Audit.md  Mapping VAS.xlsx  README.md  TEMPLATE_ANALYSIS.md  debug_mapping.py  leadsheet_revision.md  mapping_extract.xlsx  pyproject.toml  temp_map_analysis.py
.github/: copilot-instructions.md
artifacts/: current_year_general_ledger.parquet  current_year_trial_balance.parquet  fs_balance_sheet_pivot.xlsx  fs_balance_sheet_populated.xlsx  fs_income_statement_pivot.xlsx  fs_income_statement_populated.xlsx  gl_2025.parquet  previous_year_general_ledger.parquet  previous_year_trial_balance.parquet  run_log.json  tb_2024_leaves.parquet  tb_2024_standardized.parquet  tb_2025.parquet  tb_2025_leaves.parquet  tb_2025_standardized.parquet
configs/: fs_mapping.yaml  tomoe_2025.yaml  vas_account_mapping.yaml
data/: GL_30Sept2024.xlsx  GL_30Sept2025.xlsx  TB_2024.xlsx  TB_2025.xlsx
notebooks/: draft.ipynb  draft.py
templates/: BS_Template.xlsx  Income_Statement_Template.xlsx
