[project]
name = "planning_agent_ndd"
version = "0.1.0"
description = "Intelligent RPA for Audit Planning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core data processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    # Data validation & config
    "pandera>=0.18.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    # CLI & orchestration
    "typer>=0.9.0",
    "rich>=13.7.0",
    # Report generation
    "xlsxwriter>=3.2.0",
    "plotly>=5.18.0",
    # PDF parsing (basic)
    "pdfplumber>=0.11.0",
    "openpyxl>=3.1.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "jupytext>=1.18.1",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7.0",
    "sentence-transformers>=2.3.0",
]
ml = [
    "pyod>=1.1.0",
    "scikit-learn>=1.4.0",
    "ruptures>=1.1.0",
    "statsmodels>=0.14.0",
]
tui = [
    "textual>=0.50.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "black>=24.0.0",
]

[project.scripts]
auditplan = "auditplan.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["planning_agent_ndd"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
